--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,28 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PPP"
-        tools:targetApi="31" />
+        tools:targetApi="31">
+        <activity
+            android:name=".accounting.accountRecording.view.AccountRecordTestActivity"
+            android:exported="false"
+            android:label="@string/title_activity_account_record_test"
+            android:theme="@style/Theme.PPP" />
+        <activity
+            android:name=".accounting.accounting.view.AccountTestActivity"
+            android:exported="false"
+            android:label="@string/title_activity_account_test"
+            android:theme="@style/Theme.PPP" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:label="@string/title_activity_main"
+            android:theme="@style/Theme.PPP">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+    </application>
 
 </manifest>
