--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,31 +1,41 @@
 [versions]
 agp = "8.3.2"
+composeBom = "2024.05.00"
+constraintlayoutCompose = "1.0.1"
 kotlin = "1.9.0"
-coreKtx = "1.13.0"
+coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.1.5"
 espressoCore = "3.5.1"
-appcompat = "1.6.1"
+appcompat = "1.7.0"
 kotlinxSerializationJson = "1.6.3"
-lifecycleRuntimeCompose = "2.7.0"
-material = "1.11.0"
-lifecycleRuntimeKtx = "2.7.0"
+lifecycleRuntimeCompose = "2.8.1"
+material = "1.12.0"
+lifecycleRuntimeKtx = "2.8.1"
 activityCompose = "1.9.0"
-googleServices = "4.4.1"
-firebaseFirestore = "24.11.1"
-lifecycleViewmodelCompose = "2.7.0"
+googleServices = "4.4.2"
+firebaseFirestore = "25.0.0"
+lifecycleViewmodelCompose = "2.8.1"
+material3 = "1.2.1"
 navigationCompose = "2.7.7"
 navigationFragmentKtx = "2.7.7"
 navigationUiKtx = "2.7.7"
 runtimeLivedata = "1.6.7"
+uiTooling = "1.6.7"
+uiToolingPreview = "1.6.7"
 zxingAndroidEmbedded = "4.3.0"
 
 [libraries]
+androidx-compose-bom = { module = "androidx.compose:compose-bom", version.ref = "composeBom" }
+androidx-constraintlayout-compose = { module = "androidx.constraintlayout:constraintlayout-compose", version.ref = "constraintlayoutCompose" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-lifecycle-runtime-compose = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "lifecycleRuntimeCompose" }
+androidx-material3 = { module = "androidx.compose.material3:material3", version.ref = "material3" }
 androidx-navigation-fragment-ktx = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "navigationFragmentKtx" }
 androidx-navigation-ui-ktx = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "navigationUiKtx" }
 androidx-runtime-livedata = { module = "androidx.compose.runtime:runtime-livedata", version.ref = "runtimeLivedata" }
+androidx-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "uiTooling" }
+androidx-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "uiToolingPreview" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
