--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:theme="@style/Theme.PPP"
         tools:targetApi="31">
         <activity
-            android:name=".ui.view.MainActivity"
+            android:name=".test.ui.view.MainActivity"
             android:exported="true"
             android:screenOrientation="portrait"
             android:label="@string/title_activity_main"
