--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,7 @@ ansroidAutoTagger = "1.0.0"
 composeBom = "2024.06.00"
 constraintlayoutCompose = "1.0.1"
 kotlin = "1.9.0"
-hiltAndroid = "2.48"
+hiltAndroid = "2.49"
 hiltNavigationCompose = "1.2.0"
 coreKtx = "1.13.1"
 junit = "4.13.2"
@@ -41,6 +41,8 @@ androidx-runtime-livedata = { module = "androidx.compose.runtime:runtime-livedat
 androidx-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "uiTooling" }
 androidx-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "uiToolingPreview" }
 ansroid-auto-tagger = { module = "com.github.Dirtfy:ansroid-auto-tagger", version.ref = "ansroidAutoTagger" }
+hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroid" }
+hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hiltAndroid" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
